--- a/dev/00-intro/01-commands.html
+++ b/dev/00-intro/01-commands.html
@@ -289,7 +289,7 @@ and <a href="./02-options.html#template-options">Template Options</a> for availa
 </blockquote>
 <h2 id="backup"><a class="header" href="#backup"><code>backup</code></a></h2>
 <p>Back-up Apple Books' databases.</p>
-<p>Ouputs using the following structure:</p>
+<p>Outputs using the following structure:</p>
 <pre><code class="language-plaintext">[ouput-directory]
  └─ [YYYY-MM-DD-HHMMSS-VERSION]
      ├─ AEAnnotation
