--- a/dev/00-intro/02-options.html
+++ b/dev/00-intro/02-options.html
@@ -147,7 +147,7 @@
 <p>Set the output directory for all <a href="./01-commands.html">Commands</a>. Defaults to <code>~/.readstor</code>.</p>
 <h3 id="--databases-directory-path"><a class="header" href="#--databases-directory-path"><code>--databases-directory &lt;PATH&gt;</code></a></h3>
 <p>Set a custom databases directory.</p>
-<p>This can be useful when running ReadStor on on databases backed-up with the
+<p>This can be useful when running ReadStor on databases backed-up with the
 <a href="./01-commands.html#backup"><code>backup</code></a> command. The output structure the <a href="./01-commands.html#backup"><code>backup</code></a> command
 creates is identical to the required databases directory structure.</p>
 <p>The databases directory should contain the following structure:</p>
@@ -198,7 +198,7 @@ compiled and placed them into <a href="../01-templates/06-01-book.html"><code>bo
 </blockquote>
 <h3 id="--normalize-whitespace"><a class="header" href="#--normalize-whitespace"><code>--normalize-whitespace</code></a></h3>
 <p>Normalize whitespace in <a href="../01-templates/06-02-annotation.html"><code>annotation.body</code></a>.</p>
-<p>Trims whitespace and replaces all linebreaks with two consecutive linebreaks:
+<p>Trims whitespace and replaces all line-breaks with two consecutive line-breaks:
 <code>\n\n</code>.</p>
 <h3 id="--ascii-all"><a class="header" href="#--ascii-all"><code>--ascii-all</code></a></h3>
 <p>Convert all Unicode characters to ASCII.</p>
