--- a/dev/01-templates/02-02-context-modes.html
+++ b/dev/01-templates/02-02-context-modes.html
@@ -159,7 +159,7 @@ but also changes the number of output files. See
 <div class="table-wrapper"><table><thead><tr><th></th><th></th></tr></thead><tbody>
 <tr><td>Context Mode</td><td><code>book</code></td></tr>
 <tr><td>Context Objects</td><td><a href="./06-01-book.html"><code>book</code></a> <a href="./06-02-annotation.html"><code>annotations</code></a> <a href="./06-03-names.html"><code>names</code></a></td></tr>
-<tr><td>Ouput Files</td><td>=1</td></tr>
+<tr><td>Output Files</td><td>=1</td></tr>
 </tbody></table>
 </div>
 <blockquote>
@@ -225,10 +225,10 @@ for more information.</p>
 <div class="table-wrapper"><table><thead><tr><th></th><th></th></tr></thead><tbody>
 <tr><td>Context Mode</td><td><code>annotation</code></td></tr>
 <tr><td>Context Objects</td><td><a href="./06-01-book.html"><code>book</code></a> <a href="./06-02-annotation.html"><code>annotation</code></a> <a href="./06-03-names.html"><code>names</code></a></td></tr>
-<tr><td>Ouput Files</td><td>&gt;=1</td></tr>
+<tr><td>Output Files</td><td>&gt;=1</td></tr>
 </tbody></table>
 </div>
-<p>When selected, multiple files are rendered out from a context containing a the
+<p>When selected, multiple files are rendered out from a context containing the
 data from a single annotation and its respective book. For example, represented
 here in YAML:</p>
 <pre><code class="language-yaml">book:
