--- a/dev/01-templates/03-partial-templates.html
+++ b/dev/01-templates/03-partial-templates.html
@@ -165,7 +165,7 @@ templates for a fully working example.</p>
 <p>Partial templates are included using the <code>include</code> tag:</p>
 <pre><code class="language-jinja2">{% include &quot;_my-partial-template.md&quot; %}
 </code></pre>
-<p>Where <code>&quot;_my-partial-template.md&quot;</code> is a path relative to to the
+<p>Where <code>&quot;_my-partial-template.md&quot;</code> is a path relative to the
 <a href="../00-intro/02-options.html#--templates-directory-path">templates directory</a>. Therefore, this would be pointing
 to a template at the root of the <a href="../00-intro/02-options.html#--templates-directory-path">templates directory</a>.
 If we wanted to organize our templates into different directories we would
@@ -183,8 +183,9 @@ template and the <a href="../00-intro/02-options.html#--templates-directory-path
 {% include &quot;my-vault-templates/_annotation.jinja2&quot; %}
 </code></pre>
 <blockquote>
-<p><i class="fa fa-info-circle"></i> See the documentation for <a href="https://tera.netlify.app/docs/#include">include</a>
-for more information on its features and limitations.</p>
+<p><i class="fa fa-info-circle"></i> See the documentation for <a href="https://tera.netlify.app/">Tera</a>'s
+<a href="https://tera.netlify.app/docs/#include">include</a> tag for more information on its features and
+limitations.</p>
 </blockquote>
 
                     </main>
