--- a/dev/01-templates/06-01-book.html
+++ b/dev/01-templates/06-01-book.html
@@ -183,8 +183,8 @@ last-opened: {{ book.metadata.last_opened | date(format=&quot;%Y-%m-%d-%H:%M&quo
 ---
 </code></pre>
 <blockquote>
-<p><i class="fa fa-info-circle"></i> Here the <a href="https://tera.netlify.app/docs/#date"><code>date</code></a> filter is used to
-format a <code>datetime</code> object into a human-readable date.</p>
+<p><i class="fa fa-info-circle"></i> Here <a href="https://tera.netlify.app/">Tera</a>'s <a href="https://tera.netlify.app/docs/#date"><code>date</code></a>
+filter is used to format a <code>datetime</code> object into a human-readable date.</p>
 </blockquote>
 
                     </main>
