--- a/dev/01-templates/06-02-annotation.html
+++ b/dev/01-templates/06-02-annotation.html
@@ -201,8 +201,8 @@ objects, under the name <code>annotations</code>, are injected into the template
 {% endfor %}
 </code></pre>
 <blockquote>
-<p><i class="fa fa-info-circle"></i> Here the <a href="https://tera.netlify.app/docs/#join"><code>join</code></a> filter is used to
-join an array of items into a space-separated string.</p>
+<p><i class="fa fa-info-circle"></i> Here <a href="https://tera.netlify.app/">Tera</a>'s <a href="https://tera.netlify.app/docs/#join"><code>join</code></a>
+filter is used to join an array of items into a space-separated string.</p>
 </blockquote>
 
                     </main>
