--- a/dev/02-apple-books/02-restore-library.html
+++ b/dev/02-apple-books/02-restore-library.html
@@ -171,8 +171,8 @@ rsync \
 <blockquote>
 <p><i class="fa fa-exclamation-circle"></i> The trailing forward-slash after
 <code>Containers</code> and <code>Group\ Containers</code> here is important. It tells <code>rsync</code> to
-move the the archive directory's <em>contents</em> into the target. Otherwise it
-would move the archive <em>directory</em> into the target.</p>
+move the archive directory's <em>contents</em> into the target. Otherwise, it would
+move the archive <em>directory</em> into the target.</p>
 </blockquote>
 <p>For example, if <code>[PATH-TO-ARCHIVE]</code> is:</p>
 <pre><code class="language-plaintext">~/archives/2022-10-08--apple-books-v4.4-5177--macos-v12.6
