--- a/dev/01-templates/01-an-example-template.html
+++ b/dev/01-templates/01-an-example-template.html
@@ -142,9 +142,9 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="an-example-template"><a class="header" href="#an-example-template">An Example Template</a></h1>
-<p>The following is a example template along with its expected output and output
-structure. In fact it's almost identical to the default template that comes with
-ReadStor.</p>
+<p>The following is an example template along with its expected output and output
+structure. In fact, it's almost identical to the default template that comes
+with ReadStor.</p>
 <h2 id="template-syntax"><a class="header" href="#template-syntax">Template Syntax</a></h2>
 <p><a href="https://tera.netlify.app/">Tera</a>, a Jinja-flavored templating language, provides a rich set of
 tools for building a wide range of template complexities. The following is a
@@ -167,10 +167,11 @@ a space as a delimiter.</p>
 <pre><code class="language-jinja2">{# Hi! I'm a comment! #}
 </code></pre>
 <blockquote>
-<p><i class="fa fa-info-circle"></i> See Tera's <a href="https://tera.netlify.app/docs/">documentation</a>
-to learn more about these and more advanced features, including template
-<a href="https://tera.netlify.app/docs/#inheritance">inheritance</a>, the <a href="https://tera.netlify.app/docs/#include">include</a> tag, <a href="https://tera.netlify.app/docs/#macros">macros</a> and
-the full list of available <a href="https://tera.netlify.app/docs/#built-in-filters">filters</a>.</p>
+<p><i class="fa fa-info-circle"></i> See Tera's
+<a href="https://tera.netlify.app/docs/">documentation</a> to learn more about these and more advanced
+features, including template <a href="https://tera.netlify.app/docs/#inheritance">inheritance</a>, the
+<a href="https://tera.netlify.app/docs/#include">include</a> tag, <a href="https://tera.netlify.app/docs/#macros">macros</a> and the full list of
+available <a href="https://tera.netlify.app/docs/#built-in-filters">filters</a>.</p>
 </blockquote>
 <h2 id="template"><a class="header" href="#template">Template</a></h2>
 <p>Templates consist of two main sections, the configuration block written in YAML
