--- a/dev/index.html
+++ b/dev/index.html
@@ -144,7 +144,7 @@
                         <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
 <p>ReadStor is a simple CLI for exporting user-generated data from Apple Books. The
 goal of this project is to facilitate data-migration from Apple Books to any
-other platform. Currently Apple Books provides no simple way to do this.
+other platform. Currently, Apple Books provides no simple way to do this.
 Exporting is possible but not ideal and often times truncates long annotations.</p>
 <p>Version <code>0.1.x</code> contained the core functionality: (1) save all annotations and
 notes as JSON (2) render them via a custom (or the default) template using the
